[package]
name = "zelp"
version = "0.1.0"
edition = "2021"
authors = ["oiwn"]
description = "Simple configuration loader for zellij"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
log = "0.4.22"
ron = "0.8"
serde = { version = "1", features = ["derive"] }
simplelog = "0.12.2"

# NOTE: reduced size from 5.3Mb to 716Kb on ArchLinux machine
[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true  # enable link time optimization
codegen-units = 1
